# pgschemadiff

./: .gitignore  .pre-commit-config.yaml  AI_STATE.md  DAILY_LOG.md  LICENSE  ORCHESTRATOR.md  PROGRESS.md  README.md  REVIEW.md  TASK_INDEX.md  __main__.py  pyproject.toml
.agents/skills/autonomous-loops/: SKILL.md
.agents/skills/strategic-compact/: SKILL.md
.claude/agents/: README.md  architect.md  backend-engineer.md  code-reviewer.md  devops-engineer.md  qa-engineer.md  tui-engineer.md  verify.md
.codex/agents/: architect.toml  backend-engineer.toml  code-reviewer.toml  devops-engineer.toml  qa-engineer.toml  tui-engineer.toml  verify.toml
.github/workflows/: ci.yml
config/: profiles.yaml
docs/: PROJECT_CONTEXT.md  ROADMAP.md  TASKS.md  api.md  architecture.md  migration.md  ui-design.md
docs/adr/: 0000-template.md  0001-use-uv-package-manager.md  0002-psycopg3-async.md  0003-pydantic-v2-domain.md  0004-pg-catalog-only-introspection.md  0005-clean-architecture-4-layers.md  0006-per-type-comparator-visitor.md  0007-explicit-rename-annotation.md  0008-multi-file-migration-output.md  0009-five-level-risk-model.md  0010-session-scoped-postgres-container.md  0011-typer-for-cli.md  0012-snapshot-consistency.md
docs/ui-design/reference/: app.jsx  chrome.jsx  data.js  design-chat.md  pgschemadiff.html  theme.css  views-a.jsx  views-b.jsx
src/pgschemadiff/: __init__.py  __main__.py
src/pgschemadiff/application/: __init__.py
src/pgschemadiff/application/diff/: __init__.py  engine.py  topo_sort.py
src/pgschemadiff/application/diff/comparators/: __init__.py  constraint.py  index.py  table.py
src/pgschemadiff/application/inspect/: __init__.py  inspect_schema.py
src/pgschemadiff/domain/: __init__.py  column.py  constraint.py  database.py  extension.py  identity.py  index.py  models.py  ports.py  schema.py  table.py
src/pgschemadiff/domain/delta/: __init__.py  base.py  column.py  constraint.py  index.py  schema.py  table.py
src/pgschemadiff/domain/models/: __init__.py  profile.py
src/pgschemadiff/infrastructure/: __init__.py
src/pgschemadiff/infrastructure/config/: yaml_loader.py
src/pgschemadiff/infrastructure/postgres/: inspector.py  pool.py  type_normalizer.py
src/pgschemadiff/infrastructure/postgres/catalog/: columns.sql  constraints.sql  extensions.sql  indexes.sql  schemas.sql  tables.sql
src/pgschemadiff/presentation/: __init__.py  app.py  styles.tcss
src/pgschemadiff/presentation/cli/: main.py
src/pgschemadiff/presentation/cli/commands/: inspect.py  tui.py
src/pgschemadiff/presentation/screens/: comparing.py  home.py
src/pgschemadiff/presentation/tui/: __init__.py  _mock.py  app.py
src/pgschemadiff/presentation/tui/screens/: __init__.py  ai.py  help.py  main.py
src/pgschemadiff/presentation/tui/views/: __init__.py  _common.py  apply.py  connection.py  diff.py  history.py  migration.py  overview.py  placeholders.py  settings.py
src/pgschemadiff/presentation/tui/widgets/: __init__.py  cmdbar.py  header.py  statusbar.py  tabs.py
src/pgschemadiff/presentation/widgets/: confirm_dialog.py  profile_detail.py  profile_item.py
src/pgschemadiff/shared/: __init__.py  errors.py  logging.py
tests/: conftest.py  test_domain_models.py  test_home_screen.py  test_models.py  test_profile.py  test_screens.py  test_yaml_loader.py
tests/domain/: test_models.py
tests/infrastructure/: test_yaml_loader.py
tests/integration/: conftest.py  test_connection.py  test_inspector.py
tests/unit/: test_smoke.py  test_tui.py
tests/unit/application/diff/: test_engine.py  test_topo_sort.py
tests/unit/application/diff/comparators/: test_constraint.py  test_index.py  test_table.py
tests/unit/application/inspect/: test_inspect_schema.py
tests/unit/domain/: test_column.py  test_constraint.py  test_database.py  test_extension.py  test_identity.py  test_index.py  test_ports.py  test_schema.py  test_table.py
tests/unit/domain/delta/: test_base.py  test_column.py  test_constraint.py  test_index.py  test_schema.py  test_table.py
tests/unit/infrastructure/postgres/: test_catalog_sql.py  test_inspector.py  test_pool.py  test_type_normalizer.py
tests/unit/infrastructure/postgres/__snapshots__/: test_catalog_sql.ambr
