[project]
name = "pgschemadiff"
version = "0.1.0"
description = "PostgreSQL schema diff & migration tool with TUI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Henrik" }]
dependencies = [
    "textual>=0.83.0",
    "psycopg[binary,pool]>=3.2.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
]

[project.scripts]
pgschemadiff = "pgschemadiff.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgschemadiff"]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "textual-dev>=1.7.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
